Remove old files, update to reflect move to github

--- a/docs/README
+++ b/docs/README
@@ -7,17 +7,17 @@ Contents:
   1. License
   2. Contact Info
  
-4. License
+1. License
 
   This Application falls under the Standard GPL v2. See Licence 
   included with this tar file. Credit for code is listed in the 
-  changelog. 
+  changelog, or in the respective files.  
 
-5. Contact Info
+2. Contact Info
 
   Hate it?  Love it?  Let us know.  Let us know if you think of any
     more features, bugs, etc.
 
-  Public Source Repository: http://gitorious.org/archie
+  Public Source Repository: https://github.com/vollmerk/archie
   E-mail: contact@archiedb.com
 
