--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,5 +1,5 @@
-- :: 0.0.1-RC2
-	- Ability to disable/enable users
+- 17/06/2013 :: 2013 Field Release
+	- Branching for 2013 field work season. 
 
 - 06/03/2012 :: 0.0.1-RC1
 	- Add password, disable, name & email to user table for user management
