--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,33 +1,214 @@
-- :: 0.0.1-RC2
-	- Ability to disable/enable users
-
-- 06/03/2012 :: 0.0.1-RC1
-	- Add password, disable, name & email to user table for user management
-
-- 05/11/2011 :: SVN Updates
-	- Allow level to be NULL 
-	- Fixed lack of checking on classification if material
-		isn't selected
-	- Added import script bin/import.record.php.inc
-- 06/10/2011 :: SVN Updates
-	- Added a few more fields to the search
-	- Allow blank RN
-	- Change station_index to all NULL values (no record)
-		ALTER TABLE `record` MODIFY `station_index` INT(10) UNSIGNED NULL;
-	- Change feature to varchar 
-		ALTER TABLE `record` MODIFY `feature` VARCHAR(255) NOT NULL; 
-	- Allow A-Za-z0-9 in feature field
-	- Remove line breaks from notes in csv
-- 14/07/2011 :: Patch
-	- Add limit to default browse of 250
-	- Clean up Single Record view page
-
-- 13/07/2011 :: Patch
-	- Add Searching of RN & Notes
-	- Add Last Record to new Record page
-	- Add Material & Classification to New record page
-	- Remove XRF # from New record page
-	- Add Notes to CSV
-	- Rename "length" to "height" in CSV Export
-- 07/07/2011 :: Patch
-	- Make RN Unique
+FIX: report->stale() for siterecords report
+REFACTOR: Implement new site methodology
+ADD: Level reports
+ADD: Visual indication of a closed level
+- Correct access checks, and add required variables
+- Add level and site access checks
+- Add skeleton site table and logical structure
+- Fix bug with uppercase extensions
+- Remove unused table locking, not required for level
+- Initial work on 3dmodel/media files for levels, krotovina and features
+- Fix file permissions
+- Fix regression from prevent duplicate username fix.
+- Formating
+- Disable awesome
+- Fix initial level form check
+- Add close user,date tracking - Make the user opening the level the first excavator - Add sillyness
+- Add L.U to level view - Level records are now sortable
+- Improve questions on level form - Add more info to single view
+- Fix bad validation
+- Make level form open/close/edit work
+- Image upload/edit/delete on level now works
+- Fix content to deal with multiple types of parent records
+- Add mime field and move image.type to image.mime
+- Change username --> name for stats of users
+- Add concept of closed to database
+- Add notes,description,difference fields to level table
+- Adding a level works - Viewing a level works - Editing a level is in progress
+- Add additional view types (level,krotovina,feature) - Add UI references to new field names - white-space change
+- Done for the day
+- Add user,created,updated to new tables
+- Initial work on krotovina, level and feature classes - Fix typo in update for database
+- New database upgrade - Updated / fixed typos on feature, krotovina and level forms
+- Creation forms for krotovina and feature
+- Add excavation forms
+- Update .gitignor for windows stuff - Add krotovina, feature and level to index - Some fonts - Update menu
+- Add level class
+- Add Unit to level table
+- Northing,Easting and Elevation must be greater then zero
+- Increase build to 0005
+- Fix errors carrying over from other pages on new record create
+- Fix stats to be "today" not within last 24hr
+Add classification management interface
+- Fix incorrect sorting on busiest work stats function
+Add level table and enabled to classification and material
+Fix issue where error state wasn't cleared so once you made a mistake you had to start over
+Add classification management interface
+Add material management view with stats on the materials
+Add material management interface
+- Fix visual issues with error reporting on new user creation
+- Fix bug where you could create multiple users of the same username
+Update to the importer
+Merge branch 'master' of github.com:vollmerk/archie
+- Adjust the accuracy of weight,height,thickness and width
+Data generating class for tests
+Add default image for 3dmodels without a thumbnail preview
+Fix #17 - default quanity to 1 if set to 0/notset. does not affect Record updates, only newly entered records.
+Make /view of records read-only make the thumbnail image a link to the "view" for said object (3d model view or fullsize image)
+Add conditional on returning data from thumbnail
+Non-static functions that should be static
+Fix #14 - refactor 'record' and 'thumb' content types into a single 'image' content type
+Fix #11 made the regen 3d model thumbnail work
+whups need to go to sleep though
+Can now edit/delete 3d models, and also added ability to regen 3dmodel thumbnails, and improved thumbnail use
+Now creates thumbnail of stl files
+Adjustment to the permissions structure
+Alpha-sort the serach/sort fields
+Restrict downloading to manages and admins
+Add search for media
+Add ability to search for images and assoicated notes, also fix issue with multiple images on a single record causing search to return multiple rows of the same record
+Improve 3dmodel search so that if you specify a string it will narrow it down to records with 3dmodels with that in the notes
+Update view for new 3dmodel content type
+Add ability to search / sort by existance of a 3dmodel
+Add concept of 3dmodel media type, improve logic for uploading and simplify interface
+Tweak name in header
+Use filename, not entire directory
+Minor cleanup
+Improve media/3dviewer interface, enable deletion of media items
+Add notes and user to content objects, improve interface for 3dmodels and restrict it to just stl files
+Remove some options that kill browsers
+Initial attempt at integrating 3d view, crashes my browser on complex files :(
+Temp fix for file to big
+Fixed users not having access to themselves
+add [header]/[footer] to station import notes
+Fix #1 Add warnings concept and adjust import so that it allows unknown rns through as warnings
+Make the error message clearer
+Add elevation.northing and easting to csv report
+Fix #1 Import of station data works.
+Reduce accuracy of xyz data
+Arg inputs aren't passed if disabled, somewhat annoying
+Typo due to copy/paste mishap
+Implement updating of elevation/easting/northing
+Standardize button color
+Improve error display
+Standardize appearance
+Add description and user to other_media uploads
+Add xyz data fields, and update view to match edit screen
+Re-format new record form
+Fix re-direct on enable/disable
+Improve enable/disable on users, seperate modal into its own file
+Fix #5 You can now modify the access level of a user through the web interface
+Remove old files, update to reflect move to github
+Add interface for data import, import does not work yet
+- Update database to build 003, adds station data fields and user and notes to media
+Make edit_record conform to new template org
+Don't show empty table if no attached media
+Make notes searchable and sortable
+Fix thumbnail layout if more then 4 images are on a single record
+Add ply mime type
+Add ability to upload stl and ply files, testing interface change for media items
+Allow login redirect to record view/edit pages (QRCode scans primarly)
+Regenerate thumbnails added fixed thumbnail generation race condition
+Now make little pretty labels that tell you if your report might be out of date
+Improve how request is generated so that hitting refresh won't re-request generation
+Add ability to sort by everything via drop-down on view page
+Add user caching
+Take an update oppertunity to optimize our high-turnover tables
+extranious s caused view gc to fail
+Add missing fields to search and fix PHP warnings
+Fix issue where reciptes weren't correctly re-generated
+Only say it worked, if it worked
+Add ability to update the nodes on an image after its been uploaded
+Missed it on the view
+Fix upload code and add in support for notes on images
+Add fileupload js from bootstrap and style our upload form a little better.
+Create closable event notices for things like scheduling of a report
+Rearrange system tools
+Cleanup some php warnings
+Add caching for classification and material
+Fix false postive failure on dba::write on update
+Fix UNIT search
+Add material and classification to search
+View print ticket opens in a new window
+Add user search, fix but where if you search before you view it breaks pagination
+Database 0002, improves media/image handling
+Make thumbnails 120x120 instead of 75x75
+Missed a field
+Fix #23 - Reduced size of frames around thumbnails
+Thumbnails are now 75x75 max, and ratio is maintained
+Restrict reports to admins
+CSV generation now done as scheduled cronjob, bin/report.cron.php.inc must be added to your cron, and run as the web-user for reports to work
+Merge branch 'master' of gitorious.org:archie/archie
+Add sorting and searching by catalog id
+Typos
+Fix a few potential parse errors by encaspulating them in checks
+Remove $GLOBALS[user] references, and remove unused files
+Search now uses the new method, also remembers the field you last searched for
+Update build
+Add ability to sort records view, and implement good pageination - breaks search though
+Improve Image delete functionality, reduce replicated code
+Add sql for notes field on image table
+Add ability to delete images assoicated with records, currently restricted to admins only
+Add 'online' tabe to /users/manage, shows all users with an active session
+Ability to create new users in web interface
+Improve \UI\template() to save typing
+- Users can edit themselves - Admins can enable/disable users from interface - Admin users page now has "Enabled"/"Disabled"/"All" sections
+- Edit of user now works
+- Remove globals references
+- Add ability to edit/update a user - Fix stats (I think?)
+- Switched to encaspulated user and location information under \UI namespace - Testing out \UI\template() which follows /template/[page]/[action].inc.php format   but can be overridden by passing the exact name you want
+- Ticket opens in new window - Start of a User view, with ability to reset their own password
+- Add link to "LAST RECORD" on new record page - Add logout button!
+- Build updated to 0002
+- Database upgrade now works - Add Database 0001 update
+- Add checks for database is up to date - Add page with info on updating database
+- Add version to footer
+- Add update functionality - Add initial checks for code and the db being up to date - Add check for filesystem write access on required directories
+- Set Build, used by update-checker
+- Make ticket font BOLD
+- Fix typo in menu, CVS --> CSV
+- Add order by functionality, without any ui to back it up
+- Fix silly stats - Fix a few more php notices
+- Fix generation of qrcode, unexpected QRCode::png return value caused false failure
+- Add favicon (thanks famfamfam!) - Fix PHP Warnings in a few different classes - Add debug info section to manage - Add Regenerate QRcode button/function - Fix messy handling of invalid content on media pages
+- Add new index page with silly stats, maybe we'll add graphs later?
+- Forgot a link
+- Improve image display on records
+- Fix delete, cleans up thumbnails and tickets as expected now
+- Add link to print ticket from multi-report view
+- Add fpdf lib - Fix cached record causing display after update to look wrong - Add "ticket" pdf generation support
+- Adjust qrcode to fit a 1" printed square
+Updated sql structure file
+New SQL
+- Removed useless operations from init script - Made constructor and clone private on Config:: class - Fix update of single record, was missing USER ID - Fix error generated by unknown user on record::update
+- Add QRcode image to record view - /media now references image.php
+- Add script to regenerate qrcodes - Add Content:: support for qrcode read/write
+- Broken record delete... don't use this
+- Fix classification not set correctly on record edit
+- Add testing framework
+- Add display('general') error to new record
+New gitignore
+- Fix clean url not working if there is a trailing / on the web_path
+Ignore the .htaccess file as its site specific
+- Removed simpletest, think I'm going to use enhance php - Fix record class so it isnt faking user check anymore - Add define('NO_LOG') which disables logging, useful for unit tests
+Add php-simpletest lib and a /test dir
+- Known bug, edit record classification doesn't show existing classification - Moved edit button on view - Added 'disabled' print ticket button
+- Update Login to use new style
+Disabling qrcode for now, need to index properly
+- Update 'view' of record, and switch clicking of link on records/ to records/view/# - Update content allowing it to better handle qrcode images
+Generate a QRcode whenever a new record is created
+Add new file used by clean url methods
+Add default rewrite rules
+Add delete confirmation with option to cancel, some migration to the new clean url system
+Classification not Description
+Fix the edit record to match new style
+New Record now saves material and classification on 'create' attempt, even if there is an error
+Using jquery + bootstrap now, ajax has changed, all visual stuff still
+View has div style, and looks a lot less ugly, no new functionality but I hate it less
+Style changes - fixed menu, next for the rest
+Add scriptaculous and phpqrcode library
+Fix RN always being null on new record creation
+move record and user to database_object class
+Added database object class from Ampache, automates caching of reguarlly used objects, uses ram rather then queries. Showing 100 records it saved us 477 SQL commands
+Add GPL license file and a simple readme, along with a .gitignore file so settings.php isn't accidently commited
+Import Signed-off-by: Karl Vollmer <vollmer@ampache.org>
