CHANGE: version to 'pre-release'

--- a/docs/README
+++ b/docs/README
@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
----------                 README - Archie - 0.0.1-RC2               -----------
+---------                README - Archie - Pre-release              -----------
 -------------------------------------------------------------------------------
 
 Contents:
