UPDATE - add imagemagick to prereq list for build-scatter-plots

--- a/bin/README
+++ b/bin/README
@@ -5,7 +5,7 @@ backup-site.sh
 
 build-scatter-plots [--level=UID]
 
- PREREQ - python-matplotlib, python-mysqldb
+ PREREQ - python-matplotlib, python-mysqldb, imagemagick (convert)
 
   Using matplotlib this script takes the cords entered for the objects located in the level and
   creates 3 scatterplots of the data (X,Y) (X,Z) (Y,Z). These images are generated and saved
